application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-app
  namespace: staging
  labels:
    app: counter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 2000
      containers:
        - name: counter
          automountServiceAccountToken: false
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
            type: RuntimeDefault
          image: hello-world:linux
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /healthz  
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready  
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
