application/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: counter-app-service
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: counter
